--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@ body {
     display: flex;
     &__sidebar {
         display: flex;
+        position: fixed;
         align-items: center;
     }
     @media (min-width: 768px) {
@@ -25,6 +26,8 @@ body {
 }
 .hamburger {
     padding: 0.25rem;
+    width: 50px;
+    height: 50px;
     display: inline-block;
     cursor: pointer;
     background-color: transparent;
@@ -32,8 +35,22 @@ body {
     outline: none;
     // border-radius: 5px;
     margin: 0.25rem;
+    padding: 0.25rem;
     @media(min-width: 767px) {
         display: none;
+    }
+    &-container {
+        position: fixed;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #ddd;
+        right: 10%;
+        bottom: 15%;
+        width: 60px;
+        height: 60px;
+        border: 2px solid #232323;
+        border-radius: 50%;
     }
     &__box {
         width: 2.5rem;
