--- a/src/App.scss
+++ b/src/App.scss
@@ -152,10 +152,13 @@ body {
         background-color: #fff;
         text-align: center;
         cursor: pointer;
-        margin: 0 8px;
 
     }
     input[type=radio] {
+        position: absolute;
+        left: -99999px;
+    }
+    input[type=checkbox] {
         position: absolute;
         left: -99999px;
     }
